# AiSoc-Challenge-Project

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/drawable/: ic_mic.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
